k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knowyourname
  labels:
    name: knowyourname
    environment: development
